<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/distback1"
    tools:context=".Galleryactivity">

    <ImageView
        android:id="@+id/backgallery"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gallery"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">
<LinearLayout
    android:layout_marginTop="40dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/falls"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"

        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/water_slider"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@drawable/roundcorner"
        android:layout_marginBottom="40dp"
        app:iss_auto_cycle="false"
        app:iss_delay="0"
        app:iss_period="5000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sanctuaries"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"

        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/sanctuary_slider"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@drawable/roundcorner"
        android:layout_marginBottom="40dp"
        app:iss_auto_cycle="false"
        app:iss_delay="0"
        app:iss_period="5000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beaches"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"

        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/beaches_slider"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@drawable/roundcorner"
        android:layout_marginBottom="40dp"
        app:iss_auto_cycle="false"
        app:iss_delay="0"
        app:iss_period="5000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temples"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"

        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/temples_slider"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@drawable/roundcorner"
        android:layout_marginBottom="40dp"
        app:iss_auto_cycle="false"
        app:iss_delay="0"
        app:iss_period="5000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewpoints"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"

        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/viewpoint_slider"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@drawable/roundcorner"
        android:layout_marginBottom="40dp"
        app:iss_auto_cycle="false"
        app:iss_delay="0"
        app:iss_period="5000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/palaces"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"

        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/palace_slider"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@drawable/roundcorner"
        android:layout_marginBottom="40dp"
        app:iss_auto_cycle="false"
        app:iss_delay="0"
        app:iss_period="5000" />


</LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>